--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,10 +11,10 @@
     <hr>
     <img src = "./pictures/photo.jpeg"; height="20%" width="20%" style="float: left; margin-right: 15px; border: black solid 5px; border-radius: 10px;">
     <div style="line-height:2;">I am a Computer Science major at ISU with a minor in Security and Risk. I have knowledge in HTML, CSS, JavaScript, and Python. I am still currently
-        building skills in these areas.<br> My focus is primarily in areas of cybersecurity and full-stack development. I plan on working
-        to get security certifications and the IBM full stack course certification in the near future.<br> In my free time, I typically work on my 
-        programming skills and play video games for enjoyment to wind down after a while.
+        building skills in these areas.<br> My focus is primarily cybersecurity and full-stack development. I plan on working
+        to get security certifications and the IBM full stack course certification in the near future.<br> In my free time, I enjoy working on my 
+        programming skills as well as playing video games for enjoyment to wind down after a while.
     </div>
-    
+
 </body>
 </html>
